Comments from github issue were added to post

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,8 @@ author:
   by_author: " | Блог Мухина Александра"
 start_year: 2023
 copyright: "(c) Mukhin Aleksandr, 2023"
-github_username:  mukhinav
+github_username: mukhinav
+github_repo: mukhinav.github.io
 instagram_username: aleksandrmukhin_prog
 telegram_username: Mukhin_AV
 facebook_page: profile.php?id=100093415791051&mibextid=ZbWKwL
