--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 name: "Блог Мухина Александра"
 title: "Блог Мухина Александра о программировании и всего что с этим связано"
 description: Мухин Александр программист, архитектор, тех. лид, Java, HiLoad, Distributed System
-url: https://mukhinav.github.io
+url: "https://www.mukhinav.ru"
 
 # Author Setting
 author:
